--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.95.3",
     "clsx": "^2.1.1",
+    "html2canvas": "^1.4.1",
     "nanoid": "^5.1.6",
     "next": "^15.1.6",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-simple-maps": "^3.0.0",
+    "recharts": "^3.7.0"
   },
   "devDependencies": {
     "@types/node": "^20",
